apps/AxieAnalytics/webhook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axieanalytics-webhook
  namespace: axieanalytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axieanalytics-webhook
  template:
    metadata:
      labels:
        app: axieanalytics-webhook
    spec:
      containers:
        - name: axieanalytics-webhook
          image: samlapointe01/axie-analytics:webhook_listener-408
          ports:
            - containerPort: 8080
      restartPolicy: Always
