apps/AxieAnalytics/webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: axieanalytics-webhook
  namespace: axieanalytics
spec:
  selector:
    app: axieanalytics-webhook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
